library/general/containerlimits/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8scontainerlimits
  annotations:
    metadata.gatekeeper.sh/title: "Container Limits"
    metadata.gatekeeper.sh/version: 1.1.1
    description: >-
      Requires containers to have memory and CPU limits set and constrains
      limits to be within the specified maximum values.

      https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
spec:
  crd:
    spec:
      names:
        kind: K8sContainerLimits
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            exemptImages:
              description: >-
                Any container that uses an image that matches an entry in this list will be excluded
                from enforcement. Prefix-matching can be signified with `*`. For example: `my-image-*`.

                It is recommended that users use the fully-qualified Docker image name (e.g. start with a domain name)
                in order to avoid unexpectedly exempting images from an untrusted repository.
              type: array
              items:
                type: string
            cpu:
              description: "The maximum allowed cpu limit on a Pod, exclusive. Set to -1 to disable."
              type: string
            memory:
              description: "The maximum allowed memory limit on a Pod, exclusive."
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8scontainerlimits

        import future.keywords.contains
        import future.keywords.if

        import data.lib.exempt_container.is_exempt

        missing(obj, field) if {
          not obj[field]
        }

        missing(obj, field) if {
          obj[field] == ""
        }

        canonify_cpu(orig) := new if {
          is_number(orig)
          new := orig * 1000
        }

        canonify_cpu(orig) := new if {
          not is_number(orig)
          endswith(orig, "m")
          new := to_number(replace(orig, "m", ""))
        }

        canonify_cpu(orig) := new if {
          not is_number(orig)
          not endswith(orig, "m")
          regex.match("^[0-9]+(\\.[0-9]+)?$", orig)
          new := to_number(orig) * 1000
        }

        # 10 ** 21
        mem_multiple("E") := 1000000000000000000000

        # 10 ** 18
        mem_multiple("P") := 1000000000000000000

        # 10 ** 15
        mem_multiple("T") := 1000000000000000

        # 10 ** 12
        mem_multiple("G") := 1000000000000

        # 10 ** 9
        mem_multiple("M") := 1000000000

        # 10 ** 6
        mem_multiple("k") := 1000000

        # 10 ** 3
        mem_multiple("") := 1000

        # Kubernetes accepts millibyte precision when it probably shouldn't.
        # https://github.com/kubernetes/kubernetes/issues/28741
        # 10 ** 0
        mem_multiple("m") := 1

        # 1000 * 2 ** 10
        mem_multiple("Ki") := 1024000

        # 1000 * 2 ** 20
        mem_multiple("Mi") := 1048576000

        # 1000 * 2 ** 30
        mem_multiple("Gi") := 1073741824000

        # 1000 * 2 ** 40
        mem_multiple("Ti") := 1099511627776000

        # 1000 * 2 ** 50
        mem_multiple("Pi") := 1125899906842624000

        # 1000 * 2 ** 60
        mem_multiple("Ei") := 1152921504606846976000

        get_suffix(mem) := suffix if {
          not is_string(mem)
          suffix := ""
        }

        get_suffix(mem) := suffix if {
          is_string(mem)
          count(mem) > 0
          suffix := substring(mem, count(mem) - 1, -1)
          mem_multiple(suffix)
        }

        get_suffix(mem) := suffix if {
          is_string(mem)
          count(mem) > 1
          suffix := substring(mem, count(mem) - 2, -1)
          mem_multiple(suffix)
        }

        get_suffix(mem) := suffix if {
          is_string(mem)
          count(mem) > 1
          not mem_multiple(substring(mem, count(mem) - 1, -1))
          not mem_multiple(substring(mem, count(mem) - 2, -1))
          suffix := ""
        }

        get_suffix(mem) := suffix if {
          is_string(mem)
          count(mem) == 1
          not mem_multiple(substring(mem, count(mem) - 1, -1))
          suffix := ""
        }

        get_suffix(mem) := suffix if {
          is_string(mem)
          count(mem) == 0
          suffix := ""
        }

        canonify_mem(orig) := new if {
          is_number(orig)
          new := orig * 1000
        }

        canonify_mem(orig) := new if {
          not is_number(orig)
          suffix := get_suffix(orig)
          raw := replace(orig, suffix, "")
          regex.match("^[0-9]+(\\.[0-9]+)?$", raw)
          new := to_number(raw) * mem_multiple(suffix)
        }

        violation contains ({"msg": msg}) if {
          general_violation[{"msg": msg, "field": "containers"}]
        }

        violation contains ({"msg": msg}) if {
          general_violation[{"msg": msg, "field": "initContainers"}]
        }

        # Ephemeral containers not checked as it is not possible to set field.

        general_violation contains {"msg": msg, "field": field} if {
          input.parameters.cpu != "-1"
          container := input.review.object.spec[field][_]
          not is_exempt(container)
          cpu_orig := container.resources.limits.cpu
          not canonify_cpu(cpu_orig)
          msg := sprintf("container <%v> cpu limit <%v> could not be parsed", [container.name, cpu_orig])
        }

        general_violation contains {"msg": msg, "field": field} if {
          container := input.review.object.spec[field][_]
          not is_exempt(container)
          mem_orig := container.resources.limits.memory
          not canonify_mem(mem_orig)
          msg := sprintf("container <%v> memory limit <%v> could not be parsed", [container.name, mem_orig])
        }

        general_violation contains {"msg": msg, "field": field} if {
          container := input.review.object.spec[field][_]
          not is_exempt(container)
          not container.resources
          msg := sprintf("container <%v> has no resource limits", [container.name])
        }

        general_violation contains {"msg": msg, "field": field} if {
          container := input.review.object.spec[field][_]
          not is_exempt(container)
          not container.resources.limits
          msg := sprintf("container <%v> has no resource limits", [container.name])
        }

        general_violation contains {"msg": msg, "field": field} if {
          input.parameters.cpu != "-1"
          container := input.review.object.spec[field][_]
          not is_exempt(container)
          missing(container.resources.limits, "cpu")
          msg := sprintf("container <%v> has no cpu limit", [container.name])
        }

        general_violation contains {"msg": msg, "field": field} if {
          container := input.review.object.spec[field][_]
          not is_exempt(container)
          missing(container.resources.limits, "memory")
          msg := sprintf("container <%v> has no memory limit", [container.name])
        }

        general_violation contains {"msg": msg, "field": field} if {
          container := input.review.object.spec[field][_]
          not is_exempt(container)
          cpu_orig := container.resources.limits.cpu
          cpu := canonify_cpu(cpu_orig)
          max_cpu_orig := input.parameters.cpu
          max_cpu_orig != "-1"
          max_cpu := canonify_cpu(max_cpu_orig)
          cpu > max_cpu
          msg := sprintf("container <%v> cpu limit <%v> is higher than the maximum allowed of <%v>", [container.name, cpu_orig, max_cpu_orig])
        }

        general_violation contains {"msg": msg, "field": field} if {
          container := input.review.object.spec[field][_]
          not is_exempt(container)
          mem_orig := container.resources.limits.memory
          mem := canonify_mem(mem_orig)
          max_mem_orig := input.parameters.memory
          max_mem := canonify_mem(max_mem_orig)
          mem > max_mem
          msg := sprintf("container <%v> memory limit <%v> is higher than the maximum allowed of <%v>", [container.name, mem_orig, max_mem_orig])
        }
      libs:
        - |
          package lib.exempt_container

          import future.keywords.contains
          import future.keywords.if

          is_exempt(container) if {
              exempt_images := object.get(object.get(input, "parameters", {}), "exemptImages", [])
              img := container.image
              exemption := exempt_images[_]
              _matches_exemption(img, exemption)
          }

          _matches_exemption(img, exemption) if {
              not endswith(exemption, "*")
              exemption == img
          }

          _matches_exemption(img, exemption) if {
              endswith(exemption, "*")
              prefix := trim_suffix(exemption, "*")
              startswith(img, prefix)
          }
